--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,3 +8,8 @@ sql:
             package: "db"
             out: "./db/sqlc"
             sql_package: "database/sql"
+            emit_json_tags: true
+            emit_prepared_queries: false
+            emit_interface: true
+            emit_exact_table_names: false
+            emit_empty_slices: true
